removed initial values of shareBuy, shareSell, limitPrice and limitOrder. added wrap in search css to buy/sell modal to prevent overflow.

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -179,6 +179,7 @@ input:focus::placeholder {
 .modal_share, .modal_price, .modal_cost, .modal_limit {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 5px 0;
